# desktop

./: .env.example  IMPLEMENTATION_STATUS.txt  go  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: test-cli.yml
docs/: API.md  AUTHENTICATION.md  COMMANDS.md  README.md  SYNC.md  TERMINAL.md
docs/guides/: CONFIGURATION.md  DEVELOPMENT.md  TROUBLESHOOTING.md
scripts/: build-pypi.py
src/cli/: _version.py
src/cli/commands/: auth_main.py  cli_main.py  compose_main.py  plugin_main.py  protocol_main.py  sync_main.py  term_main.py  vault_main.py  vscode_main.py
src/cli/config/: cli-config.json  rediacc-gui-translations.json  rediacc-term-config.json
src/cli/core/: api_client.py  config.py  env_config.py  format_help.py  help_generator.py  protocol_handler.py  repository_env.py  shared.py  telemetry.py  vscode_shared.py
src/cli/gui/: file_browser.py  login.py  main.py  system_status.py  utilities.py
